[package]
name = "microformats-parser-website-rust"
version = "0.1.1"
edition = "2021"
authors = ["Jacky Alciné <yo@jacky.wtf>"]

[dependencies.mf2]
package = "microformats"
version = "0.2.0"

[dependencies]
trillium = "0.2"
trillium-async-std = "0.2"
trillium-conn-id = "0.2"
trillium-logger = "0.2"
trillium-router = "0.3"
trillium-tera = "0.2"
env_logger = "0.8.4"
log = "0.4"
serde_json = "1"
serde_qs = "0.8"

[dependencies.ureq]
version = "2.2.0"
features = ["charset", "gzip"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.serde]
version = "1.0.131"
features = ["derive"]

[dependencies.async-std]
version = "1.10.0"
features = ["std", "attributes"]
