[package]
name = "microformats-parser-website-rust"
version = "0.1.2"
edition = "2024"
authors = ["Jacky Alciné <yo@jacky.wtf>"]

[dependencies]
poem = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["poem-3"] }
serde = "1"
serde_json = "1"
serde_qs = "0.12"
url = "2"

[dependencies.mf2]
package = "microformats"
version = "0"
